fix: update padding-top in footer for improved spacing

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: $color-black;
   color: $color-white;
-  padding-top: $spacing-xl;
+  padding-top: $spacing-2xl;
 
   &-container {
     display: flex;
